--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="UTF-8">
 		<title>甜圈圈</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
-		<link rel="stylesheet" href="./prd/styles/usage/app@72382503d523d5d4f77df93c29e71890.css"/>
+		<link rel="stylesheet" href="./prd/styles/usage/app@48feeb44fc31c9c4ca680f515675ad63.css"/>
 	</head>
 	<body>
-		<script src="./prd/scripts/app@ce3ab4988d2e676fc12c1dc1f22d0eff.js"></script>
+		<script src="./prd/scripts/app@086dc0be0b817f51615f474aadfcf1d8.js"></script>
 	</body>
 </html>
