--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 		<meta charset="UTF-8">
 		<title>甜圈圈</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
-		<link rel="stylesheet" href="./prd/styles/usage/app@48feeb44fc31c9c4ca680f515675ad63.css"/>
+		<link rel="stylesheet" href="./prd/styles/usage/app@9c97bfff27cab4d7deab7caf203f838f
+.css"/>
 	</head>
 	<body>
-		<script src="./prd/scripts/app@086dc0be0b817f51615f474aadfcf1d8.js"></script>
+		<script src="./prd/scripts/app@f446919b3e1b92fcb22dfb650195e0c8.js"></script>
 	</body>
 </html>
