--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="UTF-8">
 		<title>甜圈圈</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
-		<link rel="stylesheet" href="./prd/styles/usage/app@72382503d523d5d4f77df93c29e71890.css"/>
+		<link rel="stylesheet" href="./prd/styles/usage/app@5f34157bfd8640a41474a6038cc9d1af.css"/>
 		<script>
 		    document.ontouchmove = function(e) {
 		        if (e.target.tagName.toUpperCase() !== 'IFRAME') {
@@ -14,6 +14,6 @@
 		</script>
 	</head>
 	<body>
-		<script src="./prd/scripts/app@ce3ab4988d2e676fc12c1dc1f22d0eff.js"></script>
+		<script src="./prd/scripts/app@935692280f8465bbf533d834975abd4d.js"></script>
 	</body>
 </html>
